--- a/CourseWork/Code.ipynb
+++ b/CourseWork/Code.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Підключення необхідний бібліотек та імпортуємо DataSet."
+    "## Підключення необхідний бібліотек та імпортуємо DataSet."
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Відображаємо перші 5 стовпчиків нашого DataSet."
+    "## Відображаємо перші 5 стовпчиків нашого DataSet."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Перевіряємо чи є у нашому DataSet пропущені значення."
+    "## Перевіряємо чи містить DataSet пропущені значення."
    ]
   },
   {
@@ -204,8 +204,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Після виконання команди можемо побачити, що DataSet не містить значень типу \"Nan\", тому можемо продовжувати роботу.\n",
-    "Представимо DataSet у матричному вигляді за такою умовою:\n",
+    "Після виконання команди можемо побачити, що DataSet не містить значень типу \"Nan\", тому можемо продовжувати роботу."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Представимо DataSet у матричному вигляді за такою умовою:\n",
     "- Відобразити 10 елементів для 4-ох ознак. \n",
     "- Виділити зеленим кольором максимальні елементи в таблиці, а червоним мінімальні."
    ]
@@ -342,8 +349,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Вираховуємо: \n",
-    "- Математичне сподівання."
+    "## Вираховуємо: \n",
+    "- #### Математичне сподівання."
    ]
   },
   {
@@ -379,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Дисперсію."
+    "- #### Дисперсію."
    ]
   },
   {
@@ -415,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Стандартизуємо дані."
+    "## Стандартизуємо дані."
    ]
   },
   {
@@ -641,7 +648,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Підраховуємо кореляцію."
+    "### Підраховуємо кореляцію."
    ]
   },
   {
@@ -828,8 +835,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Візуалізація даних.\n",
-    "Будуємо графіки типу:"
+    "## Візуалізація даних.\n",
+    "### Будуємо графіки типу:"
    ]
   },
   {
@@ -837,7 +844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Line Plot"
+    "- #### Line Plot"
    ]
   },
   {
@@ -897,7 +904,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Bar Plot"
+    "- #### Bar Plot"
    ]
   },
   {
@@ -956,7 +963,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Heatmap"
+    "- #### Heatmap"
    ]
   },
   {
@@ -995,7 +1002,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Histogram"
+    "- #### Histogram"
    ]
   },
   {
@@ -1034,7 +1041,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Збудувати лінійний графік з 4-ма лініями, які взяті з ознак та додати annotate для середнього значення кожної лінії."
+    "## Збудувати лінійний графік з 4-ма лініями, які взяті з ознак та додати annotate для середнього значення кожної лінії."
    ]
   },
   {
@@ -1069,7 +1076,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### За допомогою subplot збудувати 9 графіків, комбінуючи різні ознаки."
+    "## За допомогою subplot збудувати 9 графіків, комбінуючи різні ознаки."
    ]
   },
   {
@@ -1102,7 +1109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Вирахувати коефіцієнт пірсона для кожної пари ознак."
+    "## Вирахувати коефіцієнт пірсона для кожної пари ознак."
    ]
   },
   {
@@ -1291,7 +1298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Збудувати relplot для двох ознак, що мають найбільшу кореляцію за допомогою бібліотеки seaborn."
+    "## Збудувати relplot для двох ознак, що мають найбільшу кореляцію за допомогою бібліотеки seaborn."
    ]
   },
   {
@@ -1382,7 +1389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Видалити також випадкові значення з ознак що мають найбільшу кореляцію у кількості 10% для обох. Підрахувати кореляцію. Збудувати multipple scatterplot за допомогою FacetGrid для цих оновлених ознак використовуючи бібліотеку seaborn взявши третю ознаку за вісь x."
+    "## Видалити також випадкові значення з ознак що мають найбільшу кореляцію у кількості 10% для обох. Підрахувати кореляцію. Збудувати multipple scatterplot за допомогою FacetGrid для цих оновлених ознак використовуючи бібліотеку seaborn."
    ]
   },
   {
@@ -1390,7 +1397,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Створемо функцію find_and_delete, що буде видаляти дані."
+    "#### Створемо функцію find_and_delete, що буде видаляти дані."
    ]
   },
   {
@@ -1417,7 +1424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Порахуємо кореляцію."
+    "#### Порахуємо кореляцію."
    ]
   },
   {
@@ -1485,7 +1492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Будуємо multipple scatterplot за допомогою FacetGrid для цих оновлених ознак, використовуючи бібліотеку seaborn."
+    "#### Будуємо multipple scatterplot за допомогою FacetGrid для цих оновлених ознак, використовуючи бібліотеку seaborn."
    ]
   },
   {
