--- a/CourseWork/Code.ipynb
+++ b/CourseWork/Code.ipynb
@@ -213,8 +213,8 @@
    "metadata": {},
    "source": [
     "## Представимо DataSet у матричному вигляді за такою умовою:\n",
-    "- Відобразити 10 елементів для 4-ох ознак. \n",
-    "- Виділити зеленим кольором максимальні елементи в таблиці, а червоним мінімальні."
+    "- #### Відобразити 10 елементів для 4-ох ознак. \n",
+    "- #### Виділити зеленим кольором максимальні елементи в таблиці, а червоним мінімальні."
    ]
   },
   {
@@ -350,7 +350,10 @@
    "metadata": {},
    "source": [
     "## Вираховуємо: \n",
-    "- #### Математичне сподівання."
+    "- #### Математичне сподівання.\n",
+    "##### Annotation\n",
+    "Під даним терміном часто вживають \"середнє значення\" випадкової величини $X$. Математичним сподіванням величини X називається величина, яка рівна сумі попарних добутків величин $x[i]$ на їх ймовірності появи $p[i]$. \\\n",
+    "$M(X)=\\sum\\limits_{i=1}^{n}x_ip_i$"
    ]
   },
   {
@@ -386,7 +389,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- #### Дисперсію."
+    "- #### Дисперсію.\n",
+    "##### Annotation\n",
+    "Це міра розсіяння значень випадкової величини відносно середнього значення розподілу."
    ]
   },
   {
@@ -422,7 +427,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Стандартизуємо дані."
+    "## Стандартизуємо дані.\n",
+    "Стандартизація дозволяє усунути можливий вплив відхилень за якоюсь ознакою. Стандартизація наводить усі вихідні значення набору даних, незалежно від їх початкових розподілів та одиниць вимірювання, до набору значень з розподілу з нульовим середнім та стандартним відхиленням, рівним 1. \\\n",
+    "У результаті формується так звана стандартизована шкала, яка визначає місце кожного значення у наборі даних, вимірюючи його відхилення від середнього в одиницях стандартного відхилення. Значення стандартизованої шкали визначаються так: \\\n",
+    "$x=\\frac{x}{sum(|x|)}$"
    ]
   },
   {
@@ -653,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +702,7 @@
        "      <td>0.730196</td>\n",
        "      <td>0.914985</td>\n",
        "      <td>0.406387</td>\n",
-       "      <td>0.156941</td>\n",
+       "      <td>-0.156941</td>\n",
        "      <td>0.658089</td>\n",
        "      <td>0.961540</td>\n",
        "      <td>0.570960</td>\n",
@@ -705,7 +713,7 @@
        "      <td>1.000000</td>\n",
        "      <td>0.768045</td>\n",
        "      <td>0.600309</td>\n",
-       "      <td>0.117761</td>\n",
+       "      <td>-0.117761</td>\n",
        "      <td>0.773394</td>\n",
        "      <td>0.654112</td>\n",
        "      <td>0.698769</td>\n",
@@ -716,7 +724,7 @@
        "      <td>0.768045</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.572624</td>\n",
-       "      <td>0.151928</td>\n",
+       "      <td>-0.151928</td>\n",
        "      <td>0.773001</td>\n",
        "      <td>0.926190</td>\n",
        "      <td>0.671667</td>\n",
@@ -727,21 +735,21 @@
        "      <td>0.600309</td>\n",
        "      <td>0.572624</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.096344</td>\n",
+       "      <td>-0.096344</td>\n",
        "      <td>0.867497</td>\n",
        "      <td>0.383744</td>\n",
        "      <td>0.859666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Adj Close (USDT)</th>\n",
-       "      <td>0.156941</td>\n",
-       "      <td>0.117761</td>\n",
-       "      <td>0.151928</td>\n",
-       "      <td>0.096344</td>\n",
+       "      <td>-0.156941</td>\n",
+       "      <td>-0.117761</td>\n",
+       "      <td>-0.151928</td>\n",
+       "      <td>-0.096344</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.140562</td>\n",
-       "      <td>0.151131</td>\n",
-       "      <td>0.120797</td>\n",
+       "      <td>-0.140562</td>\n",
+       "      <td>-0.151131</td>\n",
+       "      <td>-0.120797</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Volume (USDT)</th>\n",
@@ -749,7 +757,7 @@
        "      <td>0.773394</td>\n",
        "      <td>0.773001</td>\n",
        "      <td>0.867497</td>\n",
-       "      <td>0.140562</td>\n",
+       "      <td>-0.140562</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.629303</td>\n",
        "      <td>0.947698</td>\n",
@@ -760,7 +768,7 @@
        "      <td>0.654112</td>\n",
        "      <td>0.926190</td>\n",
        "      <td>0.383744</td>\n",
-       "      <td>0.151131</td>\n",
+       "      <td>-0.151131</td>\n",
        "      <td>0.629303</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.546265</td>\n",
@@ -771,7 +779,7 @@
        "      <td>0.698769</td>\n",
        "      <td>0.671667</td>\n",
        "      <td>0.859666</td>\n",
-       "      <td>0.120797</td>\n",
+       "      <td>-0.120797</td>\n",
        "      <td>0.947698</td>\n",
        "      <td>0.546265</td>\n",
        "      <td>1.000000</td>\n",
@@ -786,39 +794,39 @@
        "Volume (BNB)             0.730196      1.000000         0.768045   \n",
        "Adj Close (BTC)          0.914985      0.768045         1.000000   \n",
        "Volume (BTC)             0.406387      0.600309         0.572624   \n",
-       "Adj Close (USDT)         0.156941      0.117761         0.151928   \n",
+       "Adj Close (USDT)        -0.156941     -0.117761        -0.151928   \n",
        "Volume (USDT)            0.658089      0.773394         0.773001   \n",
        "Adj Close (ETH)          0.961540      0.654112         0.926190   \n",
        "Volume (ETH)             0.570960      0.698769         0.671667   \n",
        "\n",
        "                  Volume (BTC)  Adj Close (USDT)  Volume (USDT)  \\\n",
-       "Adj Close (BNB)       0.406387          0.156941       0.658089   \n",
-       "Volume (BNB)          0.600309          0.117761       0.773394   \n",
-       "Adj Close (BTC)       0.572624          0.151928       0.773001   \n",
-       "Volume (BTC)          1.000000          0.096344       0.867497   \n",
-       "Adj Close (USDT)      0.096344          1.000000       0.140562   \n",
-       "Volume (USDT)         0.867497          0.140562       1.000000   \n",
-       "Adj Close (ETH)       0.383744          0.151131       0.629303   \n",
-       "Volume (ETH)          0.859666          0.120797       0.947698   \n",
+       "Adj Close (BNB)       0.406387         -0.156941       0.658089   \n",
+       "Volume (BNB)          0.600309         -0.117761       0.773394   \n",
+       "Adj Close (BTC)       0.572624         -0.151928       0.773001   \n",
+       "Volume (BTC)          1.000000         -0.096344       0.867497   \n",
+       "Adj Close (USDT)     -0.096344          1.000000      -0.140562   \n",
+       "Volume (USDT)         0.867497         -0.140562       1.000000   \n",
+       "Adj Close (ETH)       0.383744         -0.151131       0.629303   \n",
+       "Volume (ETH)          0.859666         -0.120797       0.947698   \n",
        "\n",
        "                  Adj Close (ETH)  Volume (ETH)  \n",
        "Adj Close (BNB)          0.961540      0.570960  \n",
        "Volume (BNB)             0.654112      0.698769  \n",
        "Adj Close (BTC)          0.926190      0.671667  \n",
        "Volume (BTC)             0.383744      0.859666  \n",
-       "Adj Close (USDT)         0.151131      0.120797  \n",
+       "Adj Close (USDT)        -0.151131     -0.120797  \n",
        "Volume (USDT)            0.629303      0.947698  \n",
        "Adj Close (ETH)          1.000000      0.546265  \n",
        "Volume (ETH)             0.546265      1.000000  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_normalized.corr().abs()"
+    "data_normalized.corr()"
    ]
   },
   {
@@ -826,7 +834,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "З таблиці можемо дійти висновку, що кореляція досить велика, тобто існує певна схожість даних. Тому графіки можуть накладатися один на одного.\n",
+    "__Коефіцієнт кореляції__ використовується для визначення того, наскільки сильним є взаємозв'язок між двома змінними, і його значення можуть коливатися від -1,0 до 1,0, де -1,0 означає негативну кореляцію, а +1,0 - позитивну залежність. Він враховує відносні рухи змінних, а потім визначає, чи існує між ними зв'язок. \\\n",
+    "З таблиці можемо дійти висновку, що кореляція досить велика, тобто існує певна схожість даних. Тому графіки можуть накладатися один на одного. \\\n",
     "Зауважте, що кореляційна матриця буде дзеркальним відображенням відносно діагоналі, а всі діагональні елементи будуть дорівнювати 1."
    ]
   },
