--- a/MTAD/Lab.ipynb
+++ b/MTAD/Lab.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "[53940 rows x 10 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
        "(53920, 10)"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -544,11 +544,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "digit_columns = ['carat', 'depth', 'table', 'price', 'x', 'y', 'z']\n",
+    "med = df[digit_columns].median()\n",
     "statistics_dict = {\n",
     "    'mean': df[digit_columns].mean(),\n",
     "    'trimmed_mean': stats.trim_mean(df[digit_columns], 0.01),\n",
@@ -556,7 +557,7 @@
     "    'variance': df[digit_columns].var(),\n",
     "    'std_deviation': df[digit_columns].std(),\n",
     "    'mean_deviation': (df[digit_columns] - df[digit_columns].mean()).abs().mean(),\n",
-    "    'absolute_median_deviation': (df[digit_columns] - median).abs().median()\n",
+    "    'absolute_median_deviation': (df[digit_columns] - med).abs().median()\n",
     "}"
    ]
   },
@@ -570,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -604,6 +605,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carat    2.244557e-01\n",
+      "depth    2.016769e+00\n",
+      "table    4.948705e+00\n",
+      "price    1.589813e+07\n",
+      "x        1.253013e+00\n",
+      "y        1.234878e+00\n",
+      "z        4.780789e-01\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(statistics_dict['variance'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.01"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['carat'].max()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -612,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,11 +668,417 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "((df_norm-df_norm.mean())/df_norm.std()).to_csv(r'mean_normalization.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.006237</td>\n",
+       "      <td>0.469298</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.031384</td>\n",
+       "      <td>0.043732</td>\n",
+       "      <td>0.075203</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.002079</td>\n",
+       "      <td>0.394737</td>\n",
+       "      <td>0.400000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.022825</td>\n",
+       "      <td>0.023324</td>\n",
+       "      <td>0.050813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.006237</td>\n",
+       "      <td>0.267544</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.000054</td>\n",
+       "      <td>0.045649</td>\n",
+       "      <td>0.056851</td>\n",
+       "      <td>0.050813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.018711</td>\n",
+       "      <td>0.508772</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.000433</td>\n",
+       "      <td>0.067047</td>\n",
+       "      <td>0.080175</td>\n",
+       "      <td>0.115854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.022869</td>\n",
+       "      <td>0.548246</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.000487</td>\n",
+       "      <td>0.087019</td>\n",
+       "      <td>0.097668</td>\n",
+       "      <td>0.140244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53900</th>\n",
+       "      <td>53936</td>\n",
+       "      <td>0.108108</td>\n",
+       "      <td>0.438596</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.131427</td>\n",
+       "      <td>0.288160</td>\n",
+       "      <td>0.303207</td>\n",
+       "      <td>0.292683</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53901</th>\n",
+       "      <td>53937</td>\n",
+       "      <td>0.108108</td>\n",
+       "      <td>0.539474</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.131427</td>\n",
+       "      <td>0.279601</td>\n",
+       "      <td>0.301749</td>\n",
+       "      <td>0.315041</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53902</th>\n",
+       "      <td>53938</td>\n",
+       "      <td>0.103950</td>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.366667</td>\n",
+       "      <td>0.131427</td>\n",
+       "      <td>0.275321</td>\n",
+       "      <td>0.291545</td>\n",
+       "      <td>0.304878</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53903</th>\n",
+       "      <td>53939</td>\n",
+       "      <td>0.137214</td>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.131427</td>\n",
+       "      <td>0.345221</td>\n",
+       "      <td>0.355685</td>\n",
+       "      <td>0.341463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53904</th>\n",
+       "      <td>53940</td>\n",
+       "      <td>0.114345</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.131427</td>\n",
+       "      <td>0.299572</td>\n",
+       "      <td>0.319242</td>\n",
+       "      <td>0.321138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>53905 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Index     carat     depth     table     price         x         y  \\\n",
+       "0          1  0.006237  0.469298  0.200000  0.000000  0.031384  0.043732   \n",
+       "1          2  0.002079  0.394737  0.400000  0.000000  0.022825  0.023324   \n",
+       "2          3  0.006237  0.267544  0.533333  0.000054  0.045649  0.056851   \n",
+       "3          4  0.018711  0.508772  0.300000  0.000433  0.067047  0.080175   \n",
+       "4          5  0.022869  0.548246  0.300000  0.000487  0.087019  0.097668   \n",
+       "...      ...       ...       ...       ...       ...       ...       ...   \n",
+       "53900  53936  0.108108  0.438596  0.266667  0.131427  0.288160  0.303207   \n",
+       "53901  53937  0.108108  0.539474  0.200000  0.131427  0.279601  0.301749   \n",
+       "53902  53938  0.103950  0.526316  0.366667  0.131427  0.275321  0.291545   \n",
+       "53903  53939  0.137214  0.447368  0.300000  0.131427  0.345221  0.355685   \n",
+       "53904  53940  0.114345  0.500000  0.200000  0.131427  0.299572  0.319242   \n",
+       "\n",
+       "              z  \n",
+       "0      0.075203  \n",
+       "1      0.050813  \n",
+       "2      0.050813  \n",
+       "3      0.115854  \n",
+       "4      0.140244  \n",
+       "...         ...  \n",
+       "53900  0.292683  \n",
+       "53901  0.315041  \n",
+       "53902  0.304878  \n",
+       "53903  0.341463  \n",
+       "53904  0.321138  \n",
+       "\n",
+       "[53905 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_min_max_normalization = pd.read_csv('min_max_normalization.csv')\n",
+    "df_min_max_normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Index</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>-1.198125</td>\n",
+       "      <td>-0.175829</td>\n",
+       "      <td>-1.104244</td>\n",
+       "      <td>-0.904040</td>\n",
+       "      <td>-1.591485</td>\n",
+       "      <td>-1.577778</td>\n",
+       "      <td>-1.604564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>-1.240340</td>\n",
+       "      <td>-1.372903</td>\n",
+       "      <td>1.592908</td>\n",
+       "      <td>-0.904040</td>\n",
+       "      <td>-1.645086</td>\n",
+       "      <td>-1.703762</td>\n",
+       "      <td>-1.778117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>-1.198125</td>\n",
+       "      <td>-3.414970</td>\n",
+       "      <td>3.391010</td>\n",
+       "      <td>-0.903789</td>\n",
+       "      <td>-1.502150</td>\n",
+       "      <td>-1.496788</td>\n",
+       "      <td>-1.778117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-1.071481</td>\n",
+       "      <td>0.457916</td>\n",
+       "      <td>0.244332</td>\n",
+       "      <td>-0.902033</td>\n",
+       "      <td>-1.368148</td>\n",
+       "      <td>-1.352806</td>\n",
+       "      <td>-1.315310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-1.029266</td>\n",
+       "      <td>1.091660</td>\n",
+       "      <td>0.244332</td>\n",
+       "      <td>-0.901782</td>\n",
+       "      <td>-1.243078</td>\n",
+       "      <td>-1.244820</td>\n",
+       "      <td>-1.141757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53900</th>\n",
+       "      <td>53936</td>\n",
+       "      <td>-0.163863</td>\n",
+       "      <td>-0.668742</td>\n",
+       "      <td>-0.205193</td>\n",
+       "      <td>-0.294346</td>\n",
+       "      <td>0.016547</td>\n",
+       "      <td>0.024021</td>\n",
+       "      <td>-0.057052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53901</th>\n",
+       "      <td>53937</td>\n",
+       "      <td>-0.163863</td>\n",
+       "      <td>0.950828</td>\n",
+       "      <td>-1.104244</td>\n",
+       "      <td>-0.294346</td>\n",
+       "      <td>-0.037055</td>\n",
+       "      <td>0.015022</td>\n",
+       "      <td>0.102038</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53902</th>\n",
+       "      <td>53938</td>\n",
+       "      <td>-0.206078</td>\n",
+       "      <td>0.739580</td>\n",
+       "      <td>1.143383</td>\n",
+       "      <td>-0.294346</td>\n",
+       "      <td>-0.063855</td>\n",
+       "      <td>-0.047970</td>\n",
+       "      <td>0.029724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53903</th>\n",
+       "      <td>53939</td>\n",
+       "      <td>0.131641</td>\n",
+       "      <td>-0.527910</td>\n",
+       "      <td>0.244332</td>\n",
+       "      <td>-0.294346</td>\n",
+       "      <td>0.373887</td>\n",
+       "      <td>0.347980</td>\n",
+       "      <td>0.290053</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>53904</th>\n",
+       "      <td>53940</td>\n",
+       "      <td>-0.100541</td>\n",
+       "      <td>0.317083</td>\n",
+       "      <td>-1.104244</td>\n",
+       "      <td>-0.294346</td>\n",
+       "      <td>0.088015</td>\n",
+       "      <td>0.123009</td>\n",
+       "      <td>0.145426</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>53905 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Index     carat     depth     table     price         x         y  \\\n",
+       "0          1 -1.198125 -0.175829 -1.104244 -0.904040 -1.591485 -1.577778   \n",
+       "1          2 -1.240340 -1.372903  1.592908 -0.904040 -1.645086 -1.703762   \n",
+       "2          3 -1.198125 -3.414970  3.391010 -0.903789 -1.502150 -1.496788   \n",
+       "3          4 -1.071481  0.457916  0.244332 -0.902033 -1.368148 -1.352806   \n",
+       "4          5 -1.029266  1.091660  0.244332 -0.901782 -1.243078 -1.244820   \n",
+       "...      ...       ...       ...       ...       ...       ...       ...   \n",
+       "53900  53936 -0.163863 -0.668742 -0.205193 -0.294346  0.016547  0.024021   \n",
+       "53901  53937 -0.163863  0.950828 -1.104244 -0.294346 -0.037055  0.015022   \n",
+       "53902  53938 -0.206078  0.739580  1.143383 -0.294346 -0.063855 -0.047970   \n",
+       "53903  53939  0.131641 -0.527910  0.244332 -0.294346  0.373887  0.347980   \n",
+       "53904  53940 -0.100541  0.317083 -1.104244 -0.294346  0.088015  0.123009   \n",
+       "\n",
+       "              z  \n",
+       "0     -1.604564  \n",
+       "1     -1.778117  \n",
+       "2     -1.778117  \n",
+       "3     -1.315310  \n",
+       "4     -1.141757  \n",
+       "...         ...  \n",
+       "53900 -0.057052  \n",
+       "53901  0.102038  \n",
+       "53902  0.029724  \n",
+       "53903  0.290053  \n",
+       "53904  0.145426  \n",
+       "\n",
+       "[53905 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_mean_normalization = pd.read_csv('mean_normalization.csv')\n",
+    "df_mean_normalization"
    ]
   }
  ],
