--- a/Data analysis/lab 1/main.ipynb
+++ b/Data analysis/lab 1/main.ipynb
@@ -2,22 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alex/Projects/Process-modeling/.venv/lib/python3.13/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import shutil\n",
     "import kagglehub\n",
-    "import pandas as pd"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from statsmodels.tsa.arima_process import ArmaProcess"
    ]
   },
   {
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +234,7 @@
        "4  1.325412e+09  4.58  4.58  4.58   4.58     0.0  2012-01-01 10:05:00+00:00"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,33 +376,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0          2012-01-01 10:01:00\n",
-       "1          2012-01-01 10:02:00\n",
-       "2          2012-01-01 10:03:00\n",
-       "3          2012-01-01 10:04:00\n",
-       "4          2012-01-01 10:05:00\n",
-       "                  ...         \n",
-       "6782275    2025-03-14 23:56:00\n",
-       "6782276    2025-03-14 23:57:00\n",
-       "6782277    2025-03-14 23:58:00\n",
-       "6782278    2025-03-14 23:59:00\n",
-       "6782279    2025-03-15 00:00:00\n",
-       "Name: datetime, Length: 6782280, dtype: object"
+       "0         2012-01-01 10:01:00\n",
+       "1         2012-01-01 10:02:00\n",
+       "2         2012-01-01 10:03:00\n",
+       "3         2012-01-01 10:04:00\n",
+       "4         2012-01-01 10:05:00\n",
+       "                  ...        \n",
+       "6782275   2025-03-14 23:56:00\n",
+       "6782276   2025-03-14 23:57:00\n",
+       "6782277   2025-03-14 23:58:00\n",
+       "6782278   2025-03-14 23:59:00\n",
+       "6782279   2025-03-15 00:00:00\n",
+       "Name: datetime, Length: 6782280, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['datetime']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_timestamps(n, start=1700000000, freq=60):\n",
+    "    return np.arange(start, start + n * freq, freq)\n",
+    "\n",
+    "def generate_price_series(n, start_price=100.0, ar=[1, -0.5], ma=[1], sigma=2.0):\n",
+    "    ar_params = np.r_[1, -np.array(ar)]\n",
+    "    ma_params = np.r_[1, ma]\n",
+    "    arma_process = ArmaProcess(ar_params, ma_params)\n",
+    "    return start_price + np.cumsum(arma_process.generate_sample(nsample=n, scale=sigma))\n",
+    "\n",
+    "n = 100000\n",
+    "\n",
+    "timestamps = generate_timestamps(n)\n",
+    "open_prices = generate_price_series(n)\n",
+    "high_prices = open_prices + np.abs(np.random.normal(2, 0.5, n))\n",
+    "low_prices = open_prices - np.abs(np.random.normal(2, 0.5, n))\n",
+    "close_prices = generate_price_series(n, start_price=open_prices[-1])\n",
+    "volume = np.random.randint(100, 10000, n)\n",
+    "datetime_values = pd.to_datetime(timestamps, unit='s')\n",
+    "\n",
+    "df_synthetic = pd.DataFrame({\n",
+    "    'Timestamp': timestamps,\n",
+    "    'Open': open_prices,\n",
+    "    'High': high_prices,\n",
+    "    'Low': low_prices,\n",
+    "    'Close': close_prices,\n",
+    "    'Volume': volume,\n",
+    "    'datetime': datetime_values\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column     Non-Null Count   Dtype         \n",
+      "---  ------     --------------   -----         \n",
+      " 0   Timestamp  100000 non-null  int64         \n",
+      " 1   Open       100000 non-null  float64       \n",
+      " 2   High       100000 non-null  float64       \n",
+      " 3   Low        100000 non-null  float64       \n",
+      " 4   Close      100000 non-null  float64       \n",
+      " 5   Volume     100000 non-null  int64         \n",
+      " 6   datetime   100000 non-null  datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(4), int64(2)\n",
+      "memory usage: 5.3 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_synthetic.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>datetime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1700000000</td>\n",
+       "      <td>96.549333</td>\n",
+       "      <td>99.099021</td>\n",
+       "      <td>94.686044</td>\n",
+       "      <td>1241.758948</td>\n",
+       "      <td>4059</td>\n",
+       "      <td>2023-11-14 22:13:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1700000060</td>\n",
+       "      <td>85.761955</td>\n",
+       "      <td>87.634180</td>\n",
+       "      <td>83.826519</td>\n",
+       "      <td>1241.833346</td>\n",
+       "      <td>5715</td>\n",
+       "      <td>2023-11-14 22:14:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1700000120</td>\n",
+       "      <td>71.400127</td>\n",
+       "      <td>73.881590</td>\n",
+       "      <td>69.919560</td>\n",
+       "      <td>1240.769445</td>\n",
+       "      <td>3469</td>\n",
+       "      <td>2023-11-14 22:15:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1700000180</td>\n",
+       "      <td>61.633888</td>\n",
+       "      <td>63.340438</td>\n",
+       "      <td>59.879367</td>\n",
+       "      <td>1238.191881</td>\n",
+       "      <td>9760</td>\n",
+       "      <td>2023-11-14 22:16:20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1700000240</td>\n",
+       "      <td>58.696808</td>\n",
+       "      <td>60.787739</td>\n",
+       "      <td>57.272100</td>\n",
+       "      <td>1234.310779</td>\n",
+       "      <td>3647</td>\n",
+       "      <td>2023-11-14 22:17:20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Timestamp       Open       High        Low        Close  Volume  \\\n",
+       "0  1700000000  96.549333  99.099021  94.686044  1241.758948    4059   \n",
+       "1  1700000060  85.761955  87.634180  83.826519  1241.833346    5715   \n",
+       "2  1700000120  71.400127  73.881590  69.919560  1240.769445    3469   \n",
+       "3  1700000180  61.633888  63.340438  59.879367  1238.191881    9760   \n",
+       "4  1700000240  58.696808  60.787739  57.272100  1234.310779    3647   \n",
+       "\n",
+       "             datetime  \n",
+       "0 2023-11-14 22:13:20  \n",
+       "1 2023-11-14 22:14:20  \n",
+       "2 2023-11-14 22:15:20  \n",
+       "3 2023-11-14 22:16:20  \n",
+       "4 2023-11-14 22:17:20  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_synthetic.head()"
    ]
   }
  ],
